# xplayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/laputa/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  VideoChannel.cpp  VideoChannel.h  XPlayer.cpp  XPlayer.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavutil/: frame.h
app/src/main/java/com/laputa/ffmpeg/: MainActivity.kt  XPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/laputa/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
